--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ crossterm = "0.28.1"
 tui = { version = "0.19", features = ["crossterm"] }
 neo4j = "0.1.0" 
 qdrant-client = "1.12.1" 
+ethers = { version = "1.0", features = ["rustls"] }
+
 
 [[bin]]
 name = "solarpunk"
