--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ diesel = { version = "2.0", features = ["postgres", "r2d2"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
-uuid = { version = "1.3", features = ["v4", "serde"] }
+uuid = { version = "1.11.0", features = ["v4", "serde"] }
 tokio = { version = "1.18", features = ["full"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 axum = { version = "0.7.7", features = ["macros"] }
@@ -18,7 +18,15 @@ crossterm = "0.28.1"
 tui = { version = "0.19", features = ["crossterm"] }
 neo4j = "0.1.0" 
 qdrant-client = "1.12.1" 
-ethers = { version = "2.0.14", features = ["wallet", "providers"] }
+aes = "0.8.4" 
+hex = "0.4" 
+hex-literal = "0.4.1"    
+rand = "0.8"   
+ethers = { version = "2.0.14", features = ["abigen"] }
+k256 = "0.13"
+regex = "1.5"
+cbc = "0.1.2"
+block-padding = "0.3.3"
 
 
 [[bin]]
